Complete less tutorial

--- a/Less/css/init.less
+++ b/Less/css/init.less
@@ -1,6 +1,8 @@
 @import "./const.less";
 @import "./mixins.less";
 @import "./table.less";
+@import "./namespace.less";
+@import "./javascript.less";
 
 body {
   background: @main-color;
