--- a/LessWithNode/less/init.less
+++ b/LessWithNode/less/init.less
@@ -1,11 +1,13 @@
 @import "./const.less";
+@import "./themes.less";
 @import "./mixins.less";
 @import "./table.less";
 @import "./namespace.less";
 @import "./javascript.less";
 
 body {
-  background: @main-color;
+  background: @main-background;
+  color: @main-color;
   font-size: 20px;
 }
 
